# point-cloud-experiments

./: CMakeLists.txt  README.md  indexedpointcloud.cpp  indexedpointcloud.h  pdaltest.cpp  pointcloudrenderer.cpp  pointcloudrenderer.h
laszip-reader/: CMakeLists.txt  main.cpp
renderer-3d/: main.cpp  main.qml  point-clouds-3d.pro  pointcloudgeometry.cpp  pointcloudgeometry.h  qml.qrc  shaders.qrc
